--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,15 @@ before_install:
     - tar --xz -xvf shellcheck-"${scversion}".linux.x86_64.tar.xz
     - sudo cp shellcheck-"${scversion}"/shellcheck /usr/bin/
     - /usr/bin/shellcheck --version
+    
+    -sudo apt-get install imagemagick
+    -wget http://sec.cuc.edu.cn/huangwei/course/LinuxSysAdmin/exp/chap0x04/worldcupplayerinfo.tsv
+    -wget http://sec.cuc.edu.cn/huangwei/course/LinuxSysAdmin/exp/chap0x04/web_log.tsv.7z
+    -7z x web_log.tsv.7z
+    
 
 script:
-  - bash /4th/imgPro.sh
+  - bash 4th/bash_shell/imgPro.bash -p 50 50 4th/images/a.jpg 4th/images/a1.jpg
 
 after_script:
   - /usr/bin/shellcheck test.sh
