--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ before_install:
     
 
 script:
-  - ls -l
+  - ls -l 4th
+  - ls -l 4th/images
   #任务一
   ##支持对jpeg/png/svg格式图片在保持原始宽高比的前提下压缩分辨率
   - bash 4th/bash_shell/ImagePro.bash -p 50 50 4th/images/a.jpg 4th/images/a1.jpg
@@ -48,6 +49,7 @@ script:
   ##分别统计不同4XX状态码对应的TOP 10 URL和对应出现的总次数
   - bash 4th/bash_shell/webPro.bash -e
   - ls -l
+  - ls -l 4th/images
 
 after_script:
   - /usr/bin/shellcheck test.sh
